tests/good/26_expr_statement.src
# Test: Expression statements
void main([string] args) {
    int x = 5;
    x + 10;  # expression statement
    print_int(x);
}
