tests/bad/15_invalid_escape.src
# Test: Invalid escape sequence
string main([string] args) {
    return "Invalid \q escape";  # Invalid escape sequence
}
